<resources>
    <string name="app_name">login</string>
    <string name="Login">Login</string>
    <string name="login">Login\n</string>
    <string name="username">Login Your Email</string>
    <string name="password">Login Password\n</string>
    <string name="no_account">Create new account?</string>
    <string name="register">Register</string>
    <string name="text1">Register\n</string>
    <string name="etEmail1">Enter E-mail</string>
    <string name="et_password">Enter Password</string>
    <string name="rbFirst">Male</string>
    <string name="rbSecond">Female</string>
    <string name="rbThird">Other</string>
    <string name="tvGender">Select gender</string>
    <string name="btnRegister">Register</string>
    <string name="etNumber">Enter Mob. No.</string>
    <string name="etOther">Mention Here</string>
    <string name="Number">Number</string>
    <string name="tvFirst">First Activity\n</string>
    <string name="etName">Enter Your Name</string>
    <string name="etRoll">Enter Your Roll NO.</string>
    <string name="etTemp">Enter Temperature</string>
    <string name="btnMove">Move</string>
    <string name="tvScond">Second Activity</string>
    <string name="tvSecond">Second Activity</string>
    <string name="tvName">Your Name Is</string>
    <string name="tvRoll">Your College Roll no.</string>
    <string name="tvTemp">Temperature In Your City\n</string>
</resources>