<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_100"
    android:gravity="center_horizontal"
    android:padding="20dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvRegister1"
        android:text="@string/text1"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/blue_800"
        android:textSize="40sp"
        />
    <EditText
        android:id="@+id/etEmail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etEmail1"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword1"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/et_password"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNumber"
        android:paddingTop="20dp"
        android:textColor="@color/black"
        android:inputType="number"
        android:hint="@string/Number"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/llSelect"
        android:padding="20dp">

      <RadioGroup
          android:id="@+id/rgReg"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tvGender"
              android:text="@string/tvGender"
              android:fontFamily="sans-serif-black"
              android:textSize="20sp"
              />
          <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/rbFirst"
              android:text="@string/rbFirst"
              />
          <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/rbSecond"
              android:text="@string/rbSecond"
              />
          <RadioButton
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/rbThird"
              android:text="@string/rbThird"
              />
      </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/llRegister1"
        android:layout_weight="1"
        android:gravity="center"
        >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:padding="10dp"
        android:text="@string/btnRegister"
        android:backgroundTint="@color/blue_800"
        />
    </LinearLayout>
</LinearLayout>