<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/orange_100"
    android:gravity="center"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginVertical="30dp"
        android:fontFamily="sans-serif-black"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:background="@color/orange_100"
        />
    <EditText
        android:id="@+id/etEmail"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/etPassword"
        android:fontFamily="sans-serif-black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:padding="10dp"
        android:layout_margin="30dp"
        android:hint="@string/Login"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/orange_800"
        />
    <LinearLayout
        android:id="@+id/llRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp">
        <TextView
            android:id="@+id/tvAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@color/black"
            android:text="@string/no_account"/>
        <TextView
            android:id="@+id/tvRegister"
            android:paddingHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:fontFamily="sans-serif-black"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/register"/>
    </LinearLayout>

</LinearLayout>