<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/orange_800"
    >
   <!--<androidx.appcompat.widget.Toolbar
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/"
       />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFirst"
        android:fontFamily="sans-serif-black"
        android:textSize="50sp"
        android:textColor="@color/orange_100"
        android:layout_weight="1"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llFirst"
        android:layout_weight="1"
        android:background="@color/orange_100"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:id="@+id/etName"
        android:inputType="text"
        android:textColor="@color/black"
        android:hint="@string/etName"
        android:textColorHint="@color/black"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etRoll"
            android:paddingVertical="30dp"
            android:inputType="number"
            android:textColor="@color/black"
            android:hint="@string/etRoll"
            android:textColorHint="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTemp"
            android:paddingVertical="30dp"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:hint="@string/etTemp"
            android:textColorHint="@color/black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMove"
            android:layout_marginVertical="30dp"
            android:hint="@string/btnMove"
            android:padding="18dp"
            android:textColorHint="@color/orange_100"
            android:backgroundTint="@color/orange_800"
            />

</LinearLayout>
</LinearLayout>