<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_800"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvSecond"
        android:textColor="@color/orange_100"
        android:layout_weight="2"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="40sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_100"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/llSecond"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvName"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etName1"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvRoll"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etRoll1"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTemp"
            android:paddingVertical="20dp"
            android:textColor="@color/black"
            android:textSize="19sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTemp1"
            android:textColor="@color/black"
            />
    </LinearLayout>

</LinearLayout>